--- a/src/main/resources/static/study.html
+++ b/src/main/resources/static/study.html
@@ -153,8 +153,8 @@
                                         href="#" class="text-muted"><i class="icon-comments"></i> 243</a></div>
                                 <h4><a :href="'article.html?'+items.articleId">{{items.title}}</a></h4>
                             </div>
-                            <div class="item-content">
-                                <div class="text">{{items.content}}</div>
+                            <div class="item-content" style="display:flex">
+                                <span class="icon icon-eye-open"></span><div class="text" style="margin-left:10px">点击进入查看详情</div>
                             </div>
                         </div>
                     </div>
