--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,51 +14,52 @@
 </head>
 
 <body>
-    <!-- 导航 -->
-    <header class="header">
-	<div class="container clearfix">
-		<div class="left">
-			<a href="index.html"><img src="image/logo.png" alt="" class="img1" /></a>
-		</div>
-		<p class="header-p">Open Mutual Platform</p>
-		<div class="nav">
-			<ul class="navbar_nav" data-in="fadeInDown" data-out="fadeOutUp">
-				<li class="active">
-					<a href="index.html">首页</a>
-				</li>
-				<li>
-					<a href="study.html">study</a>
-				</li>
-				<li>
-					<a href="share.html">share</a>
-				</li>
-				<li>
-					<a href="javascript:void(0)">team</a>
-				</li>
-				<li>
-					<a href="user.html">个人主页</a>
-				</li>
-				<li>
-					<a href="login.html">登陆</a>
-				</li>
-			</ul>
-		</div>
-		<!--登陆后个人信息-->
-		<div id="nav_user" class="header_nav_persion">
-			<a href="#" class="">
-				<img width="40" height="40" src="image/index/man3.webp" id="header_nav_img">
-			</a>
-			<div class="menu" id="header_nav_menu" style="height:0;overflow:hidden">
-				<div class="group"><a href="/friends/weibo/"<span class="icon icon-user"></span>个人中心</a></div>
-				<div class="group"><a href="/settings/"><span class="icon icon-cogs"></span>帐号设置</a></div>
-				<div class="group"><a href="#"><span class="icon icon-signin"></span>退出</a></div>
+	<!-- 导航 -->
+	<header class="header" id="app">
+		<div class="container clearfix">
+			<div class="left">
+				<a href="index.html"><img src="image/logo.png" alt="" class="img1" /></a>
 			</div>
+			<p class="header-p">Open Mutual Platform</p>
+			<div class="nav">
+				<ul class="navbar_nav" data-in="fadeInDown" data-out="fadeOutUp">
+					<li class="active">
+						<a href="index.html">首页</a>
+					</li>
+					<li>
+						<a href="study.html">study</a>
+					</li>
+					<li>
+						<a href="share.html">share</a>
+					</li>
+					<li>
+						<a href="team.html">team</a>
+					</li>
+					<li>
+						<a href="user.html">个人主页</a>
+					</li>
+					<li id="login">
+						<a href="login.html">登陆</a>
+					</li>
+				</ul>
+			</div>
+			<!--登陆后个人信息-->
+			<div id="nav_user" class="header_nav_persion" @mousemove="UserMove()" @mouseout="UserOut()">
+				<a href="#" class="">
+					<img width="40" height="40" :src="'avatar/'+user.userAvatar" id="header_nav_img">
+				</a>
+				<div class="menu" id="header_nav_menu" style="height: 0;overflow:hidden;">
+					<div class="group"><a href="user.html"><span class="icon icon-user"></span>个人中心</a></div>
+					<div class="group"><a href="userset.html"><span class="icon icon-cogs"></span>帐号设置</a></div>
+					<div class="group"><a href="#" @click="quit_log"><span class="icon icon-signin"></span>退出</a></div>
+				</div>
+			</div>
+			<a href="javascript:void(0)" id="navToggle">
+				<span></span>
+			</a>
 		</div>
-		<a href="javascript:void(0)" id="navToggle">
-			<span></span>
-		</a>
-	</div>
-</header>
+		<input type="hidden" name="accessToken" id="token" />
+	</header>
 	<!--移动端的导航-->
 	<div class="m_nav">
 		<div class="top clearfix">
@@ -325,49 +326,13 @@
 			</div>
 		</div>
 	</footer>
+	<!--js-->
 	<script src="js/jquery/jquery.min.js"></script>
 	<script src="js/zui.min.js"></script>
 	<script src="js/swiper.min.js"></script>
-	<script>
-		$(function () {
-			//超过一定高度导航添加类名
-			var nav = $("header"); //得到导航对象  
-			var win = $(window); //得到窗口对象  
-			var sc = $(document); //得到document文档对象。  
-			win.scroll(function () {
-				if (sc.scrollTop() >= 100) {
-					nav.addClass("on");
-				} else {
-					nav.removeClass("on");
-				}
-			})
-
-			//移动端展开nav
-			$('#navToggle').on('click', function () {
-				$('.m_nav').addClass('open');
-			})
-			//关闭nav
-			$('.m_nav .top .closed').on('click', function () {
-				$('.m_nav').removeClass('open');
-			})
-
-			//二级导航  移动端
-			$(".m_nav .ul li").click(function () {
-				$(this).children("div.dropdown_menu").slideToggle('slow')
-				$(this).siblings('li').children('.dropdown_menu').slideUp('slow');
-			});
-
-		})
-
-		//var token = document.cookie.split(";")[0];
-		//console.log(token);
-		document.querySelector("#nav_user").addEventListener('mousemove', function () {
-			document.querySelector("#header_nav_menu").style.height = "auto";
-		})
-		document.querySelector("#nav_user").addEventListener('mouseout', function () {
-			document.querySelector("#header_nav_menu").style.height = "0";
-		})
-	</script>
+	<script src="js/vue/vue.min.js"></script>
+	<script src="js/vue/vue-resource.min.js"></script>
+	<script src="js/index/index.js"></script>
 </body>
 
 </html>
