--- a/src/main/resources/static/share.html
+++ b/src/main/resources/static/share.html
@@ -177,11 +177,14 @@
                     <!--表单提交-->
                     <section>
                         <form class="form-horizontal">
-                            <div class="form-group">
+                            <div class="form-group" id="label">
                                 <label for="exampleInputType" class="col-sm-2">标签(文章类型)</label>
                                 <div class="col-md-6 col-sm-10">
-                                    <input type="text" class="form-control" id="exampleInputType"
-                                        placeholder="起一个引人注目的标签吧" name="articleType">
+                                    <!--<input type="text" class="form-control" id="exampleInputType"-->
+                                        <!--placeholder="起一个引人注目的标签吧" name="articleType">-->
+                                    <select style="width:100%;height:30px;border-radius:4px;border:1px solid #38b03f;" id="exampleInputType" @change="changeLable()" value="1">
+                                        <option v-for="labels in label.data" :value="labels.typeId">{{labels.typeName}}</option>
+                                    </select>
                                 </div>
                             </div>
                             <div class="form-group">
@@ -239,6 +242,8 @@
     <!--js-->
     <script src="js/jquery/jquery.min.js"></script>
     <script src="js/zui.min.js"></script>
+    <script src="js/vue/vue.min.js"></script>
+    <script src="js/vue/vue-resource.min.js"></script>
     <!-- <script src="js/wangEditor.min.js"></script> -->
     <script src="js/editormd.min.js"></script>
     <script src="js/zui.uploader.min.js"></script>
