--- a/src/main/resources/static/teammake.html
+++ b/src/main/resources/static/teammake.html
@@ -32,20 +32,32 @@
                         <a href="share.html">share</a>
                     </li>
                     <li>
-                        <a href="javascript:void(0)">team</a>
+                        <a href="team.html">team</a>
                     </li>
                     <li>
                         <a href="user.html">个人主页</a>
                     </li>
-                    <li>
+                    <li id="login">
                         <a href="login.html">登陆</a>
                     </li>
                 </ul>
             </div>
+            <!--登陆后个人信息-->
+            <!-- <div id="nav_user" class="header_nav_persion" @mousemove="UserMove()" @mouseout="UserOut()">
+            <a href="#" class="">
+                <img width="40" height="40" :src="'avatar/'+user.userAvatar" id="header_nav_img">
+            </a>
+            <div class="menu" id="header_nav_menu" style="height: 0;overflow:hidden;">
+                <div class="group"><a href="user.html"><span class="icon icon-user"></span>个人中心</a></div>
+                <div class="group"><a href="userset.html"><span class="icon icon-cogs"></span>帐号设置</a></div>
+                <div class="group"><a href="#" @click="quit_log"><span class="icon icon-signin"></span>退出</a></div>
+            </div>
+        </div> -->
             <a href="javascript:void(0)" id="navToggle">
                 <span></span>
             </a>
         </div>
+        <input type="hidden" name="accessToken" id="token" />
     </header>
     <!--移动端的导航-->
     <div class="m_nav">
@@ -61,13 +73,13 @@
                 <a href="index.html">首页</a>
             </li>
             <li class="dropdown">
-                <a href="study.html)">study</a>
+                <a href="study.html">study</a>
             </li>
             <li>
                 <a href="share.html">share</a>
             </li>
             <li>
-                <a href="javascript:void(0)">team</a>
+                <a href="team.html">team</a>
             </li>
             <li>
                 <a href="user.html">个人主页</a>
@@ -103,7 +115,8 @@
                 <div class="form-group">
                     <label for="description" class="col-sm-2 required">团队简介</label>
                     <div class="col-md-6 col-sm-10">
-                        <textarea class="form-control" rows="3" placeholder="这里输入队伍简介" id="description" name="description"></textarea>
+                        <textarea class="form-control" rows="3" placeholder="这里输入队伍简介" id="description"
+                            name="description"></textarea>
                     </div>
                 </div>
                 <div class="form-group">
@@ -117,14 +130,15 @@
                     <div class="col-md-6 col-sm-10">
                         <select style="width:100%;height:30px;border-radius:4px;border:1px solid #38b03f;" id="type"
                             class="form-control" @change="changeType()" value="1">
-                            <option v-for="teamTypes in teamType.data" :value="teamTypes.typeId">{{teamTypes.typeName}}</option>
+                            <option v-for="teamTypes in teamType.data" :value="teamTypes.typeId">{{teamTypes.typeName}}
+                            </option>
                         </select>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="switch" style="margin-left:170px;">
-                            <input type="checkbox" class="col-md-1" name="visual" checked
-                            value="0" id="visual" @click="Switch"/>
+                        <input type="checkbox" class="col-md-1" name="visual" checked value="0" id="visual"
+                            @click="Switch" />
                         <label>设置团队是否可见</label>
                     </div>
                 </div>
@@ -133,7 +147,7 @@
                         <button type="button" class="btn btn-info" @click="formset">立即创建</button>
                     </div>
                 </div>
-                <input type="hidden" name="accessToken" id="token"/>
+                <input type="hidden" name="accessToken" id="token" />
             </form>
         </div>
     </div>
