--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -73,29 +73,14 @@
 			<li class="active">
 				<a href="index.html">首页</a>
 			</li>
-			<!--<li class="dropdown">-->
-			<!--<a href="st'">-->
-			<!---->
-			<!--</a>-->
-			<!--&lt;!&ndash;<div class="dropdown_menu">&ndash;&gt;-->
-			<!--&lt;!&ndash;<a href="#">Menu-one</a>&ndash;&gt;-->
-			<!--&lt;!&ndash;<a href="#">Menu-two</a>&ndash;&gt;-->
-			<!--&lt;!&ndash;<a href="#">Menu-three</a>&ndash;&gt;-->
-			<!--&lt;!&ndash;</div>&ndash;&gt;-->
-			<!--</li>-->
 			<li class="dropdown">
-				<a href="study.html)">study</a>
-				<!--<div class="dropdown_menu">-->
-				<!--<a href="#">Custom Menu</a>-->
-				<!--<a href="#">Custom Menu</a>-->
-				<!--<a href="#">Custom Menu</a>-->
-				<!--</div>-->
+				<a href="study.html">study</a>
 			</li>
 			<li>
 				<a href="share.html">share</a>
 			</li>
 			<li>
-				<a href="javascript:void(0)">team</a>
+				<a href="team.html">team</a>
 			</li>
 			<li>
 				<a href="user.html">个人主页</a>
@@ -175,9 +160,9 @@
 						</a>
 					</div>
 					<div class="down-entrance">
-						<a href="#"><img src="image/index/icon3.png" alt="" width="200px" height="200px"
+						<a href="team.html"><img src="image/index/icon3.png" alt="" width="200px" height="200px"
 								class="img-circle"></a>
-						<a class="card" href="###">
+						<a class="card" href="team.html">
 							<div class="card-heading"><strong>Find Team</strong></div>
 							<div class="card-content text-muted">找一些志同道合的小伙伴吧</div>
 						</a>
