--- a/src/main/resources/static/teamhome.html
+++ b/src/main/resources/static/teamhome.html
@@ -32,20 +32,32 @@
                         <a href="share.html">share</a>
                     </li>
                     <li>
-                        <a href="javascript:void(0)">team</a>
+                        <a href="team.html">team</a>
                     </li>
                     <li>
                         <a href="user.html">个人主页</a>
                     </li>
-                    <li>
+                    <li id="login">
                         <a href="login.html">登陆</a>
                     </li>
                 </ul>
             </div>
+            <!--登陆后个人信息-->
+            <!-- <div id="nav_user" class="header_nav_persion" @mousemove="UserMove()" @mouseout="UserOut()">
+                <a href="#" class="">
+                    <img width="40" height="40" :src="'avatar/'+user.userAvatar" id="header_nav_img">
+                </a>
+                <div class="menu" id="header_nav_menu" style="height: 0;overflow:hidden;">
+                    <div class="group"><a href="user.html"><span class="icon icon-user"></span>个人中心</a></div>
+                    <div class="group"><a href="userset.html"><span class="icon icon-cogs"></span>帐号设置</a></div>
+                    <div class="group"><a href="#" @click="quit_log"><span class="icon icon-signin"></span>退出</a></div>
+                </div>
+            </div> -->
             <a href="javascript:void(0)" id="navToggle">
                 <span></span>
             </a>
         </div>
+        <input type="hidden" name="accessToken" id="token" />
     </header>
     <!--移动端的导航-->
     <div class="m_nav">
@@ -61,7 +73,7 @@
                 <a href="index.html">首页</a>
             </li>
             <li class="dropdown">
-                <a href="study.html)">study</a>
+                <a href="study.html">study</a>
             </li>
             <li>
                 <a href="share.html">share</a>
@@ -84,7 +96,7 @@
     <!--main-->
     <div class="main" id="teamHome">
         <div class="container">
-            <input type="hidden" name="accessToken" id="token"/>
+            <input type="hidden" name="accessToken" id="token" />
             <!--团队简介-->
             <section class="team">
                 <div class="team-header">
@@ -98,10 +110,12 @@
                         <h1 style="font-size:30px">{{teammation.teamName}}</h1>
                         <dd class="pull-right" style="bottom:0px;position:absolute;right:0">
                             <div style="display:inline-block">
-                                <span class="label label-success"><i class="icon-tag" style="margin-right:4px"></i>类型:{{teammation.type}}</span>
+                                <span class="label label-success"><i class="icon-tag"
+                                        style="margin-right:4px"></i>类型:{{teammation.type}}</span>
                             </div>
                             <div style="display:inline-block">
-                                <span class="label label-info"><i class="icon-time"></i>创建时间:{{teammation.createdAt|capitalize}}</span>
+                                <span class="label label-info"><i
+                                        class="icon-time"></i>创建时间:{{teammation.createdAt|capitalize}}</span>
                             </div>
                         </dd>
                     </div>
@@ -112,28 +126,33 @@
                         <div class="intro-right">
                             <p>大家好，这里是{{teammation.teamName}}团队</p>
                             <h style="color:#858282;;font-size:14px;letter-spacing:2px">
-                              {{teammation.description}}
+                                {{teammation.description}}
                             </h>
+                            <a :href="'teamroom.html?'+tar" style="display: block;padding-top:20px;"><button
+                                    class="btn btn-info">进入主页</button></a>
                         </div>
                     </div>
                 </div>
                 <div class="user">
                     <h1 style="margin-top:0;padding-top:30px;color: #e95e78;">Our Team</h1>
                     <div>
-                        <div class="share_exp">
+                        <div class="share_exp" v-for="teammations in teammation.teamMemberVOList">
                             <a class="card" href="#">
                                 <div class="card-header">
-                                    <img src="image/index/man1.webp" class="img-circle card-inline" alt="圆形图片">
+                                    <div style="display:none">{{teammations.memberId}}</div>
+                                    <img :src="'avatar/'+teammations.memberAvatar" class="img-circle card-inline"
+                                        alt="圆形图片">
                                     <div class="card-inline">
                                         <div class="card-content text-muted"><span
-                                                class="icon icon-star"></span>&nbsp;学校:太原理工大学
+                                                class="icon icon-star"></span>&nbsp;学校:
                                         </div>
                                         <div class="card-content text-muted"><span
-                                                class="icon icon-star"></span>&nbsp;学院:软件学院
+                                                class="icon icon-star"></span>&nbsp;学院:
                                         </div>
                                     </div>
                                 </div>
-                                <div class="card-heading" style="color:#494c51"><strong>张无忌</strong></div>
+                                <div class="card-heading" style="color:#494c51">
+                                    <strong>{{teammations.memberNick}}</strong></div>
                                 <div class="card-content text-muted">分享《九阳真经》，一起研究"乾坤大挪移",加入明教团队</div>
                                 <div class="card-actions">
                                     <div class="pull-left text-danger" style="margin-right:30px"><i
@@ -143,53 +162,12 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="share_exp">
-                            <a class="card" href="#">
-                                <div class="card-header">
-                                    <img src="image/index/man2.webp" class="img-circle card-inline" alt="圆形图片">
-                                    <div class="card-inline">
-                                        <div class="card-content text-muted"><span
-                                                class="icon icon-star"></span>&nbsp;学校:太原理工大学
-                                        </div>
-                                        <div class="card-content text-muted"><span
-                                                class="icon icon-star"></span>&nbsp;学院:软件学院
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="card-heading" style="color:#494c51"><strong>赵敏</strong></div>
-                                <div class="card-content text-muted">我分享了一个idea,关于如何召集六大门派</div>
-                                <div class="card-actions">
-                                    <div class="pull-left text-danger" style="margin-right:30px"><i
-                                            class="icon icon-diamond"></i>粉丝:10</div>
-                                    <div class="pull-left text-danger"><i class="icon icon-star"></i>关注:100</div>
-                                    <div class="pull-right text-danger"><i class="icon-heart-empty"></i> 被赞次数:210</div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="share_exp">
-                            <a class="card" href="###">
-                                <div class="card-header">
-                                    <img src="image/index/man3.webp" class="img-circle card-inline" alt="圆形图片">
-                                    <div class="card-inline">
-                                        <div class="card-content text-muted"><span
-                                                class="icon icon-star"></span>&nbsp;学校:太原理工大学
-                                        </div>
-                                        <div class="card-content text-muted"><span
-                                                class="icon icon-star"></span>&nbsp;学院:软件学院
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="card-heading" style="color:#494c51"><strong>杨逍</strong></div>
-                                <div class="card-content text-muted">加入明教团队，一起为张教主护法。刚刚分享了“乾坤大挪移秘籍”</div>
-                                <div class="card-actions">
-                                    <div class="pull-left text-danger" style="margin-right:30px"><i
-                                            class="icon icon-diamond"></i>粉丝:10</div>
-                                    <div class="pull-left text-danger"><i class="icon icon-star"></i>关注:100</div>
-                                    <div class="pull-right text-danger"><i class="icon-heart-empty"></i> 被赞次数:210</div>
-                                </div>
-                            </a>
-                        </div>
                     </div>
+                </div>
+                <div class="join">
+                    <h1>立即加入我们</h1>
+                    <button class="btn btn-info btn-block" style="margin: 20px auto;width: 60%;" @click="joinTeam"><i
+                            class="icon-plus"></i>加入</button>
                 </div>
             </section>
         </div>
