--- a/src/main/resources/static/userset.html
+++ b/src/main/resources/static/userset.html
@@ -33,20 +33,32 @@
                         <a href="share.html">share</a>
                     </li>
                     <li>
-                        <a href="javascript:void(0)">team</a>
+                        <a href="team.html">team</a>
                     </li>
                     <li>
                         <a href="user.html">个人主页</a>
                     </li>
-                    <li>
+                    <li id="login">
                         <a href="login.html">登陆</a>
                     </li>
                 </ul>
             </div>
+            <!--登陆后个人信息-->
+            <!-- <div id="nav_user" class="header_nav_persion" @mousemove="UserMove()" @mouseout="UserOut()">
+                <a href="#" class="">
+                    <img width="40" height="40" :src="'avatar/'+user.userAvatar" id="header_nav_img">
+                </a>
+                <div class="menu" id="header_nav_menu" style="height: 0;overflow:hidden;">
+                    <div class="group"><a href="user.html"><span class="icon icon-user"></span>个人中心</a></div>
+                    <div class="group"><a href="userset.html"><span class="icon icon-cogs"></span>帐号设置</a></div>
+                    <div class="group"><a href="#" @click="quit_log"><span class="icon icon-signin"></span>退出</a></div>
+                </div>
+            </div> -->
             <a href="javascript:void(0)" id="navToggle">
                 <span></span>
             </a>
         </div>
+        <input type="hidden" name="accessToken" id="token" />
     </header>
     <!--移动端的导航-->
     <div class="m_nav">
@@ -61,29 +73,14 @@
             <li class="active">
                 <a href="index.html">首页</a>
             </li>
-            <!--<li class="dropdown">-->
-            <!--<a href="st'">-->
-            <!---->
-            <!--</a>-->
-            <!--&lt;!&ndash;<div class="dropdown_menu">&ndash;&gt;-->
-            <!--&lt;!&ndash;<a href="#">Menu-one</a>&ndash;&gt;-->
-            <!--&lt;!&ndash;<a href="#">Menu-two</a>&ndash;&gt;-->
-            <!--&lt;!&ndash;<a href="#">Menu-three</a>&ndash;&gt;-->
-            <!--&lt;!&ndash;</div>&ndash;&gt;-->
-            <!--</li>-->
             <li class="dropdown">
-                <a href="study.html)">study</a>
-                <!--<div class="dropdown_menu">-->
-                <!--<a href="#">Custom Menu</a>-->
-                <!--<a href="#">Custom Menu</a>-->
-                <!--<a href="#">Custom Menu</a>-->
-                <!--</div>-->
+                <a href="study.html">study</a>
             </li>
             <li>
                 <a href="share.html">share</a>
             </li>
             <li>
-                <a href="javascript:void(0)">team</a>
+                <a href="team.html">team</a>
             </li>
             <li>
                 <a href="user.html">个人主页</a>
@@ -107,7 +104,7 @@
                     <div id="_set_profile" class="setting-unit ">
                         <div class="title" style="position:relative">
                             <h3 class="inline">个人资料</h3>
-                            <h5 class="inline">tyutjohn</h5>
+                            <h5 class="inline">{{user.userNick}}</h5>
                             <a class="edit-label inline" id="edit-lable" style="position:absolute;right:60px;top:20px;"
                                 @click="clickfoll">编辑<span class="icon icon-double-angle-down"></span></a>
                         </div>
@@ -119,23 +116,29 @@
                                         <tr>
                                             <td class="name">昵称：</td>
                                             <td class="has-success">
-                                                <input class="form-control" type="text" :value="user.userNick" name="userNick"
-                                                    id="userNick">
+                                                <input class="form-control" type="text" :value="user.userNick"
+                                                    name="userNick" id="userNick">
                                             </td>
                                         </tr>
                                         <tr>
                                             <td class="name">学院:</td>
                                             <td class="has-success">
-                                                <select style="width:100%;height:30px;border-radius:4px;border:1px solid #38b03f;" id="academyId" @change="changeCollage()" value="1">
-                                                    <option v-for="colleges in college.data" :value="colleges.academyId">{{colleges.academyName}}</option>
+                                                <select
+                                                    style="width:100%;height:30px;border-radius:4px;border:1px solid #38b03f;"
+                                                    id="academyId" @change="changeCollage()" value="1">
+                                                    <option v-for="colleges in college.data"
+                                                        :value="colleges.academyId">{{colleges.academyName}}</option>
                                                 </select>
                                             </td>
                                         </tr>
                                         <tr>
                                             <td class="name">学校:</td>
                                             <td class="has-success">
-                                                <select style="width:100%;height:30px;border-radius:4px;border:1px solid #38b03f;" id="schoolId" @change="changeSchool()" value="1">
-                                                    <option v-for="schools in school.data" :value="schools.schoolId">{{schools.schoolName}}</option>
+                                                <select
+                                                    style="width:100%;height:30px;border-radius:4px;border:1px solid #38b03f;"
+                                                    id="schoolId" @change="changeSchool()" value="1">
+                                                    <option v-for="schools in school.data" :value="schools.schoolId">
+                                                        {{schools.schoolName}}</option>
                                                 </select>
                                             </td>
                                         </tr>
@@ -149,8 +152,8 @@
                                         <tr>
                                             <td class="name">真实姓名</td>
                                             <td class="has-success">
-                                                <input class="form-control" type="text" :value="user.userName" name="userName"
-                                                    id="userName">
+                                                <input class="form-control" type="text" :value="user.userName"
+                                                    name="userName" id="userName">
                                             </td>
                                         </tr>
                                         <tr>
@@ -164,7 +167,7 @@
                                             <td class="has-success">
                                                 <div class="switch text-left">
                                                     <input type="checkbox" class="col-md-1" name="visual" checked
-                                                        value="0" id="exampleInputcheck" @click="Switch"/>
+                                                        value="0" id="exampleInputcheck" @click="Switch" />
                                                     <label>设置信息是否对他人可见</label>
                                                 </div>
                                             </td>
@@ -178,8 +181,8 @@
                                         </tr>
                                         <input type="hidden" name="accessToken" id="token" />
                                         <tr>
-                                            <td><button class="btn btn-danger" type="button"
-                                                    id="form-button1" @click="form1">保存</button></td>
+                                            <td><button class="btn btn-danger" type="button" id="form-button1"
+                                                    @click="form1">保存</button></td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -195,14 +198,15 @@
                         </div>
                         <hr>
                         <div class="holder" style="overflow: hidden;height:0" id="second-holder">
-                            <img :src="avatar" width="200" height="200"
-                                style="margin-left:150px;margin-bottom:10px" id="imgname"/>
+                            <img :src="avatar" width="200" height="200" style="margin-left:150px;margin-bottom:10px"
+                                id="imgname" />
                             <form class="img-form">
                                 <div class="fake-file button" @click="setAvatar">上传头像</div>
                                 <input type="file" accept="image/*" class="form-control" style="display:none"
-                                    id="inputfile" @change="changeImage($event)" ref="avatarInput" name="avatar"/>
-                                    <input type="hidden" name="accessToken" id="token1" />
-                                <button class="btn btn-danger" type="button" id="form-button" style="margin-top:50px" @click="edit">确认修改</button>
+                                    id="inputfile" @change="changeImage($event)" ref="avatarInput" name="avatar" />
+                                <input type="hidden" name="accessToken" id="token1" />
+                                <button class="btn btn-danger" type="button" id="form-button" style="margin-top:50px"
+                                    @click="edit">确认修改</button>
                             </form>
                         </div>
                     </div>
