--- a/src/main/resources/static/userset.html
+++ b/src/main/resources/static/userset.html
@@ -125,7 +125,8 @@
                                             <td class="has-success">
                                                 <select
                                                     style="width:100%;height:30px;border-radius:4px;border:1px solid #38b03f;"
-                                                    id="academyId" @change="changeCollage()" value="1">
+                                                    id="academyId"
+                                                    @change="changeCollage()">
                                                     <option v-for="colleges in college.data"
                                                         :value="colleges.academyId">{{colleges.academyName}}</option>
                                                 </select>
@@ -136,7 +137,7 @@
                                             <td class="has-success">
                                                 <select
                                                     style="width:100%;height:30px;border-radius:4px;border:1px solid #38b03f;"
-                                                    id="schoolId" @change="changeSchool()" value="1">
+                                                    id="schoolId" @change="changeSchool()">
                                                     <option v-for="schools in school.data" :value="schools.schoolId">
                                                         {{schools.schoolName}}</option>
                                                 </select>
