--- a/src/main/resources/static/article.html
+++ b/src/main/resources/static/article.html
@@ -161,7 +161,7 @@
                         <hr />
                         <ul>
                             <li v-for="otherarticles in otherarticle">
-                                <a :href="'article.html/'+otherarticles.articleId">{{otherarticles.title}}</a>
+                                <a :href="'article.html?'+otherarticles.articleId">{{otherarticles.title}}</a>
                             </li>
                         </ul>
                     </a>
