--- a/src/main/resources/static/userset.html
+++ b/src/main/resources/static/userset.html
@@ -158,7 +158,7 @@
                                             </td>
                                         </tr>
                                         <tr>
-                                            <td class="name">手机号:</td>
+                                            <td class="name">学号:</td>
                                             <td class="has-success">
                                                 <input class="form-control" type="number" :value="user.userNumber"
                                                     name="userNumber" id="userNumber">
