上传服务器之前的本地运行

--- a/src/main/resources/static/examples/image-cross-domain-upload.html
+++ b/src/main/resources/static/examples/image-cross-domain-upload.html
@@ -91,7 +91,7 @@ exit;
                     imageFormats      : ["jpg", "jpeg", "gif", "png", "bmp", "webp"],
                     imageUploadURL    : "http://www.ipandao.com/editor.md/examples/php/cross-domain-upload.php?test=dfdf",
                     crossDomainUpload : true,
-                    uploadCallbackURL : "http://localhost/editor.md/examples/php/upload_callback.html?test=dfdf"
+                    uploadCallbackURL : "http://127.0.0.1/editor.md/examples/php/upload_callback.html?test=dfdf"
                     
                     /*
                      跨域时，上传的图片服务器后台只需要返回一个跳转 URL 并跳转到原页面同域下的 callback 页面，结构如下：
