--- a/src/main/resources/static/examples/@links.html
+++ b/src/main/resources/static/examples/@links.html
@@ -17,7 +17,7 @@
                 <textarea style="display:none;">### Disable @link & email address auto link
 
 > Editor.md default enable @link & email address auto link; 
-> Unsupported xxxx@xxxxx, xxxx@localhost  ...
+> Unsupported xxxx@xxxxx, xxxx@127.0.0.1  ...
 
 ```javascript
 var testEditor;
