上传服务器

--- a/src/test/static/login.html
+++ b/src/test/static/login.html
@@ -113,7 +113,7 @@
         let formdata = JSON.stringify(obj);
         console.log(obj);
         $.ajax({
-            url: "http://127.0.0.1:8080/user/login",
+            url: "http://www.lichuachua.com:8082/user/login",
             contentType : 'application/json',
             data: formdata,
             type: 'POST',
